--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gitflow-story",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://neocra.github.io/git-flows-story",
   "dependencies": {
     "@gitgraph/react": "^1.5.4",
     "@testing-library/jest-dom": "^5.11.4",
@@ -11,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
@@ -18,6 +20,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "build-storybook -s public",
+    "deploy": "npm run cleanup && gh-pages -b deploy -d storybook-static",
+    "cleanup": "rm -rf node_modules/.cache/gh-pages/",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
