Add git flows story (#1)
* Add git flows story

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "gitflow-story",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://neocra.github.io/git-flows-story",
   "dependencies": {
+    "@gitgraph/react": "^1.5.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
@@ -17,10 +20,15 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "build-storybook -s public",
+    "deploy": "npm run cleanup && gh-pages -b deploy -d storybook-static",
+    "cleanup": "rm -rf node_modules/.cache/gh-pages/",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +47,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "^6.1.20",
+    "@storybook/addon-essentials": "^6.1.20",
+    "@storybook/addon-links": "^6.1.20",
+    "@storybook/node-logger": "^6.1.20",
+    "@storybook/preset-create-react-app": "^3.1.6",
+    "@storybook/react": "^6.1.20"
   }
 }
